# PortfoliOS

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs
.cargo/: config.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cargo-fmt.yml  rust.yml
kernel/: Cargo.toml
kernel/scripts/: create-boot-image.py
kernel/src/: lib.rs  main.rs  serial.rs
kernel/src/allocator/: mod.rs
kernel/src/framebuffer/: animation.rs  color.rs  global_writer.rs  mod.rs
kernel/src/framebuffer/writer/: mod.rs
kernel/src/interrupts/: gdt.rs  mod.rs
kernel/src/interrupts/io_apic/: mod.rs
kernel/src/interrupts/local_apic/: mod.rs
kernel/src/keyboard/: mod.rs
kernel/src/memory/: mod.rs
kernel/src/power/: management.rs  mod.rs
kernel/src/shell/: mod.rs
scripts/: main.py
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: mod.rs
src/interrupts/: handlers.rs  idt.rs  index.rs  mod.rs
src/vga_buffer/: color_code.rs  mod.rs  writing.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
