[package]
name = "kernel"
version = "0.1.0-prealpha-1"
edition = "2021"

[dependencies]
bootloader_api = "0.11.10"
embedded-graphics = "0.8.1"
x86_64 = "0.15.2"
spin = "0.9.8"
linked_list_allocator = { version = "0.9.1" }
tinybmp = "0.6.0"
acpi = "5.2.0"
uart_16550 = "0.3.2"
x2apic = "0.5.0"
pc-keyboard = "0.8.0"
